--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sensors-unity (18.02-1) bionic; urgency=low
+
+  * port to Gtk.Application and AppMenu
+
+ -- Pavel Rojtberg <pavel@rojtberg.net>  Thu, 01 Feb 2018 20:29:42 +0100
+
 sensors-unity (16.09-1) xenial; urgency=low
 
   * Initial release
